--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "morgan": "^1.9.1",
+    "supertest": "^4.0.2",
     "uuid": "^3.4.0",
     "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "mocha": "^7.0.1",
+    "nodemon": "^2.0.2"
   }
 }
